--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                         <img src="./img/Java_Development.png" class="img-fluid img-circle">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Java</h5>
+                        <h5 class="card-title text-center">Java</h5>
                         <p class="card-text text-justify">Es uno de los lenguajes más demandados en la industria, esta basado en el paradigma orientado a objetos que nos ayuda a resolver problemas plasmándolos en objetos para posteriormente llevarlos al código de una manera efectiva y rápida.</p>
-                        <a href="https://developer.ibm.com/es/components/java-platform/" class="btn btn-info">Más información</a>
+                        <a href="https://developer.ibm.com/es/components/java-platform/" class="btn btn-success btn-lg btn-block">Más información</a>
                     </div>
                 </div>
             </div>
@@ -115,9 +115,9 @@
                         <img src="./img/Python_Develepment.png" class="img-fluid img-circle">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Python</h5>
+                        <h5 class="card-title text-center">Python</h5>
                         <p class="card-text text-justify">Es un lenguaje de programación multiplataforma de propósito general; es interpretado, por lo que no hace falta compilación para poder usarse, algo que resulta cómodo en el flujo de desarrollo y donde se promueve de manera activa la legibilidad del código.</p>
-                        <a href="https://developer.ibm.com/es/components/tensorflow/" class="btn btn-info">Más información</a>
+                        <a href="https://developer.ibm.com/es/components/tensorflow/" class="btn btn-success btn-lg btn-block">Más información</a>
                     </div>
                 </div>
             </div>
@@ -128,9 +128,9 @@
                         <img src="./img/Web_Design.png" class="img-fluid img-circle">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Página Web</h5>
+                        <h5 class="card-title text-center">Página Web</h5>
                         <p class="card-text text-justify">Una página web altamente efectiva y visualmente atractiva le permite a tu empresa dar a conocer los productos, trabajos, proyectos y servicios que ofrece, cómo ubicarte y contactarte de la forma más fácil y rápida; el fin verdadero es promocionar su negocio.</p>
-                        <a href="https://developer.ibm.com/es/components/cloud-ibm/" class="btn btn-info">Más información</a>
+                        <a href="https://developer.ibm.com/es/components/cloud-ibm/" class="btn btn-success btn-lg btn-block">Más información</a>
                     </div>
                 </div>
             </div>
