--- a/index.html
+++ b/index.html
@@ -7,32 +7,32 @@
     <title>My Site with Bootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no ">
     <!-- CSS -->
+    <link rel="stylesheet " href="./css/normalize.css ">
     <link rel="stylesheet " href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css " integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2
         " crossorigin="anonymous ">
-    <link rel="stylesheet " href="./css/style.css ">
 
 </head>
 <body>
 
     <!-- Image and text -->
-    <nav class="navbar navbar-expand-lg sticky-top navbar-green ">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark ">
         <a class="navbar-brand " href="# ">
-            <img src="./img/Development_Icon.png " width="35 " height="30" class="d-inline-block align-top " alt=" " loading="lazy "> 
-            &nbsp; Development Team
+            <img src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg " width="30 " height="30
+        " class="d-inline-block align-top " alt=" " loading="lazy "> Bootstrap
         </a>
         <div class="collapse navbar-collapse justify-content-end " id="navbarNav ">
             <ul class="navbar-nav ">
                 <li class="nav-item active ">
-                    <a class="nav-link " href="# ">Inicio <span class="sr-only ">(current)</span></a>
+                    <a class="nav-link " href="# ">Home <span class="sr-only ">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link " href="#services ">Servicios</a>
+                    <a class="nav-link " href="# ">Features</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link " href="#news ">Noticias</a>
+                    <a class="nav-link " href="# ">Pricing</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link " href="#team ">Equipo</a>
+                    <a class="nav-link disabled " href="# " tabindex="-1 " aria-disabled="true ">Disabled</a>
                 </li>
             </ul>
         </div>
@@ -47,21 +47,30 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="./img/banner.jpg" alt="team banner">
+                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg"
+                    preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: First slide"><title>Placeholder</title>
+                    <rect
+                        width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="./img/banner_1.jpg" alt="team banner">
+                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg"
+                    preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Second slide"><title>Placeholder</title>
+                    <rect
+                        width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="./img/banner_2.jpg" alt="team banner">
+                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg"
+                    preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Third slide"><title>Placeholder</title>
+                    <rect
+                        width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -79,7 +88,7 @@
     </div>
 
 <!-- services -->
-<div class="container-fluid" id="services">
+<div class="container-fluid">
         <div class="row justify-content-center mb-5">
             <div class="col-sm-6 col-xs-12 col-lg-4 mt-5">
             
@@ -135,7 +144,7 @@
     </div>
 
 <!-- news -->
-    <div class="container-fluid" id="news">
+    <div class="container-fluid">
         <div class="row mt-md-5 mt-sm-5 mt-xs-5">
             <div class="col-lg-6 col-xs-12">
                 <div class="d-flex justify-content-center align-items-center">
@@ -239,7 +248,7 @@
     </div>
 
 <!-- members -->
-<div class="container-fluid" id="team">
+<div class="container-fluid">
     <div class="row justify-content-center mb-5">
 
         <div class="col mt-5">
