--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" width="800" height="400" src="/semana-2-193/img/banner.jpg"
+                <img class="d-block w-100" src="/semana-2-193/img/banner.jpg"
                     alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Bienvenido</h5>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" width="800" height="400" src="/semana-2-193/img/banner2.jpg"
+                <img class="d-block w-100" src="/semana-2-193/img/banner2.jpg"
                     alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Java y Phyton</h5>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" width="800" height="400" src="/semana-2-193/img/banner3.jpg"
+                <img class="d-block w-100" src="/semana-2-193/img/banner3.jpg"
                     alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Pagina Web alternativa</h5>
@@ -389,16 +389,16 @@
     <footer class="page-footer bg-green text-black pt-4">
 
         <!-- Footer Text -->
-        <div class="container-fluid text-center text-md-left">
+        <div class="container-fluid text-center text-md-left p-4">
 
             <!-- Grid row -->
             <div class="row">
 
                 <!-- Grid column -->
-                <div class="col-md-6 mt-md-0 mt-3">
-
+                <div class="col-md-6 mt-md-0 mt-3 text-justify">
                     <!-- Content -->
                     <h5 class="text-uppercase font-weight-bold">Ten presente que...</h5>
+                    </br>
                     <p>Practicar el “pensamiento computacional” ayuda a aprender a resolver problemas y a procesar
                         grandes volúmenes de información. Estimula la creatividad y aprendizajes vinculados al arte.
                         Ayuda a desarrollar un pensamiento estructurado y a adquirir habilidades creativas y cognitivas
@@ -414,7 +414,8 @@
                 <div class="col-md-6 mb-md-0 mb-3">
 
                     <!-- Content -->
-                    <h5 class="text-uppercase font-weight-bold">Contactanos</h5>
+                    <h5 class="text-uppercase font-weight-bold ">Contactanos</h5>
+                    </br>
                     <dl class="row">
                         <dt class="col-sm-5 text-muted">Jose Andres Lopez Muñoz</dt>
                         <dd class="col-sm-3"><a href="tel:3132926678">+57 3132926678</a></dd>
