--- a/index.html
+++ b/index.html
@@ -7,37 +7,38 @@
     <title>My Site with Bootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no ">
     <!-- CSS -->
-    <link rel="stylesheet " href="./css/normalize.css ">
-    <link rel="stylesheet " href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css " integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2
-        " crossorigin="anonymous ">
-    <link rel="stylesheet " href="./css/style.css ">
+    <link rel=" stylesheet " href=" ./css/normalize.css ">
+    <link rel=" stylesheet " href="
+        https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css " integrity="
+        sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2 " crossorigin=" anonymous ">
+    <link rel=" stylesheet " href=" ./css/style.css ">
 </head>
 <body>
 
     <!-- Image and text -->
     <nav class=" navbar navbar-expand-lg sticky-top navbar-dark bg-green h-80">
-    <a class="navbar-brand text-dark font-weight-bold" href="# ">
-        <img src="/semana-2-193/img/icono.png" width="30 " height="30
-        " class="d-inline-block align-top" alt=" " loading="lazy "> Desarrollo Web
-    </a>
-    <div class="collapse navbar-collapse justify-content-end " id="navbarNav ">
-        <ul class="navbar-nav ">
-            <li class="nav-item active align-items-stretch">
-                <a class="nav-link text-dark font-weight-bold" href="# ">Inicio <span
-                        class="sr-only ">(current)</span></a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link text-dark font-weight-bold" href="#services ">Servicios</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link text-dark font-weight-bold" href="#news ">Noticias</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link text-dark font-weight-bold" href="#team " tabindex="-1 "
-                    aria-disabled="true ">Equipo</a>
-            </li>
-        </ul>
-    </div>
+        <a class="navbar-brand text-dark font-weight-bold" href="# ">
+            <img src="/semana-2-193/img/icono.png" width="30 " height="30
+            " class="d-inline-block align-top" alt=" " loading="lazy "> Desarrollo Web
+        </a>
+        <div class="collapse navbar-collapse justify-content-end " id="navbarNav ">
+            <ul class="navbar-nav ">
+                <li class="nav-item active align-items-stretch">
+                    <a class="nav-link text-dark font-weight-bold" href="# ">Inicio <span
+                            class="sr-only ">(current)</span></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link text-dark font-weight-bold" href="#services ">Servicios</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link text-dark font-weight-bold" href="#news ">Noticias</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link text-dark font-weight-bold" href="#team " tabindex="-1 "
+                        aria-disabled="true ">Equipo</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <!-- carousel -->
@@ -49,24 +50,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="/semana-2-193/img/banner.jpg"
-                    alt="First slide">
+                <img class="d-block w-100" src="/semana-2-193/img/banner.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Bienvenido</h5>
                     <p>Es un placer para nosotros prestarle nuestros servicios</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/semana-2-193/img/banner2.jpg"
-                    alt="First slide">
+                <img class="d-block w-100" src="/semana-2-193/img/banner2.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Java y Phyton</h5>
                     <p>Dos lenguajes más demandados en la industria</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/semana-2-193/img/banner3.jpg"
-                    alt="First slide">
+                <img class="d-block w-100" src="/semana-2-193/img/banner3.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Pagina Web alternativa</h5>
                     <p>Que tu empresa muestre los productos y servicios que ofrece</p>
@@ -141,7 +139,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- news -->
     <div class="container-fluid" id="news">
@@ -262,80 +259,93 @@
         </div>
     </div>
 
-<!-- members -->
-<div class="container-fluid" id="team">
-    <div class="row justify-content-center mb-5">
+    <!-- members -->
+    <div class="container-fluid" id="team">
+        <div class="text-center p-3 mb-2 bg-green text-dark title-section justify-content-center">
+            <h2>Equipo de Desarrollo</h2>
+        </div>
+        <div class="row justify-content-center mb-3">
 
-        <div class="col mt-5">
-            <div class="box card text-black">  
+            <div class="col mt-3">
+                <div class="box card text-black bg-light">
                 <div class="d-flex justify-content-center p-2">
-                    <img src="img/member1.jpeg" alt="Luisa-Fernanda-Castellanos-Rosales" class="teamImg mt-3">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Luisa Fernanda Castellanos Rosales</h5>
-                    <p class="card-text">Ingeniera de Petróleos / Entrenadora de Baloncesto. Edad 28 años. Pasatiempo Montar Bicicleta.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-black">Universidad Industrial de Santander / Tunja / Boyacá</small>
+                        <img src="img/member1.jpeg" alt="Luisa-Fernanda-Castellanos-Rosales" class="teamImg mt-3">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Luisa Fernanda Castellanos Rosales</h5>
+                        <p class="card-text">Ingeniera de Petróleos / Entrenadora de Baloncesto. Edad 28 años.
+                            Pasatiempo Montar Bicicleta.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-black">Universidad Industrial de Santander / Tunja / Boyacá</small>
+                    </div>
                 </div>
             </div>
 
-        <div class="col mt-5">
-            <div class="box card text-black">  
-                <div class="d-flex justify-content-center p-2">
-                    <img src="img/member2.jpeg" alt="Maria-Fernanda-Florez-Rodriguez" class="teamImg mt-3">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Maria Fernanda Florez Rodríguez</h5>
-                    <p class="card-text">Estudiante de Bioingenieria / Edad 23 años. Interes en Diversos Lenguajes Java, C, C++, Matlab y R.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-black">Universidad de Antioquia / Medellín / Antioquia</small>
-                </div>
-            </div>
-
-                                             
-        <div class="col mt-5">
-            <div class="box card text-black">  
-                <div class="d-flex justify-content-center p-2">
-                    <img src="img/member3.jpg" alt="Alberto-Salazar-Mayorga" class="teamImg mt-3">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Alberto Salazar Mayorga</h5>
-                    <p class="card-text">Ingeniero Industrial / Esp. en Dirección de Proyectos / MBA. Edad 31 Años. Pasatiempos Fútbol / Motociclismo.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-black">Universidad Sergio Arboleda / Bogotá D.C. / Cundinamarca</small>
+            <div class="col mt-3">
+                <div class="box card text-black bg-light">
+                    <div class="d-flex justify-content-center p-2">
+                        <img src="img/member2.jpeg" alt="Maria-Fernanda-Florez-Rodriguez" class="teamImg mt-3">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Maria Fernanda Florez Rodríguez</h5>
+                        <p class="card-text">Estudiante de Bioingenieria / Edad 23 años. Interes en Diversos Lenguajes
+                            Java, C, C++, Matlab y R.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-black">Universidad de Antioquia / Medellín / Antioquia</small>
+                    </div>
                 </div>
             </div>
 
 
-        <div class="col mt-5">
-            <div class="box card text-black">  
-                <div class="d-flex justify-content-center p-2">
-                    <img src="img/member4.jpeg" alt="Jose-Andres-Lopez-Muñoz" class="teamImg mt-3">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Jose Andres Lopez Muñoz</h5>
-                    <p class="card-text">Estudiante de Ingeniería Electrónica / Edad 22 Años. Apasionado por la I.A. Machine Learning y Cloud Computing.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-black">Universidad Santo Tomas / Bogotá D.C. / Cundinamarca</small>
+            <div class="col mt-3">
+                <div class="box card text-black bg-light">
+                    <div class="d-flex justify-content-center p-2">
+                        <img src="img/member3.jpg" alt="Alberto-Salazar-Mayorga" class="teamImg mt-3">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Alberto Salazar Mayorga</h5>
+                        <p class="card-text">Ingeniero Industrial / Esp. en Dirección de Proyectos / MBA. Edad 31 Años.
+                            Pasatiempos Fútbol / Motociclismo.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-black">Universidad Sergio Arboleda / Bogotá D.C. / Cundinamarca</small>
+                    </div>
                 </div>
             </div>
 
 
-        <div class="col mt-5">
-            <div class="box card text-black">  
-                <div class="d-flex justify-content-center p-2">
-                    <img src="img/member5.jpeg" alt="Henry-Alejandro-Caceres-Tellez" class="teamImg mt-3">
+            <div class="col mt-3">
+                <div class="box card text-black bg-light">
+                    <div class="d-flex justify-content-center p-2">
+                        <img src="img/member4.jpeg" alt="Jose-Andres-Lopez-Muñoz" class="teamImg mt-3">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Jose Andres Lopez Muñoz</h5>
+                        <p class="card-text">Estudiante de Ingeniería Electrónica / Edad 22 Años. Apasionado por la I.A.
+                            Machine Learning y Cloud Computing.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-black">Universidad Santo Tomas / Bogotá D.C. / Cundinamarca</small>
+                    </div>
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title">Henry Alejandro Cáceres Téllez</h5>
-                    <p class="card-text">Ingeniero De Sistemas / Edad 28 Años. Pasatiempos Fútbol, Baloncesto, Ciclismo, Videojuegos y Anime.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-black">Universidad del Tolima / Ibagué / Tolima</small>
+            </div>
+
+
+            <div class="col mt-3">
+                <div class="box card text-black bg-light">
+                    <div class="d-flex justify-content-center p-2">
+                        <img src="img/member5.jpeg" alt="Henry-Alejandro-Caceres-Tellez" class="teamImg mt-3">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Henry Alejandro Cáceres Téllez</h5>
+                        <p class="card-text">Ingeniero De Sistemas / Edad 28 Años. Pasatiempos Fútbol, Baloncesto,
+                            Ciclismo, Videojuegos y Anime.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-black">Universidad del Tolima / Ibagué / Tolima</small>
+                    </div>
                 </div>
             </div>
 
@@ -397,7 +407,7 @@
         <!-- Footer Text -->
 
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-1 bg-dark">© 2020 Copyright: DAD
+        <div class="footer-copyright text-center py-1 bg-gray">© 2020 Copyright: DAD
         </div>
         <!-- Copyright -->
 
