--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- Image and text -->
     <nav class=" navbar navbar-expand-lg sticky-top navbar-dark bg-green h-80">
         <a class="navbar-brand text-dark font-weight-bold" href="# ">
-            <img src="/semana-2-193/img/icono.png" width="30 " height="30
+            <img src="./img/icono.png" width="30 " height="30
             " class="d-inline-block align-top" alt=" " loading="lazy "> Desarrollo Web
         </a>
         <div class="collapse navbar-collapse justify-content-end " id="navbarNav ">
@@ -50,21 +50,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="/semana-2-193/img/banner.jpg" alt="First slide">
+                <img class="d-block w-100" src="./img/banner.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Bienvenido</h5>
                     <p>Es un placer para nosotros prestarle nuestros servicios</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/semana-2-193/img/banner2.jpg" alt="First slide">
+                <img class="d-block w-100" src="./img/banner2.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Java y Phyton</h5>
                     <p>Dos lenguajes más demandados en la industria</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/semana-2-193/img/banner3.jpg" alt="First slide">
+                <img class="d-block w-100" src="./img/banner3.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block texto-borde">
                     <h5>Pagina Web alternativa</h5>
                     <p>Que tu empresa muestre los productos y servicios que ofrece</p>
@@ -370,7 +370,7 @@
                         grandes volúmenes de información. Estimula la creatividad y aprendizajes vinculados al arte.
                         Ayuda a desarrollar un pensamiento estructurado y a adquirir habilidades creativas y cognitivas
                         que te harán ver los escenarios desde otro punto de vista.</p>
-                    <a href="https://github.com/JoseAndres-py/semana-2-193"> Repositorio GitHub</a>
+                    <a href="https://github.com/JoseAndres-py."> Repositorio GitHub</a>
 
                 </div>
                 <!-- Grid column -->
