Finalizar creacion de componente de equipo VUE

--- a/public/index.html
+++ b/public/index.html
@@ -260,96 +260,8 @@
     </div>
 
     <!-- members -->
-    <div class="container-fluid" id="team">
-        <div class="text-center p-3 mb-2 bg-green text-dark title-section justify-content-center">
-            <h2>Equipo de Desarrollo</h2>
-        </div>
-        <div class="row justify-content-center mb-3">
-
-            <div class="col mt-3">
-                <div class="box card text-black bg-light">
-                <div class="d-flex justify-content-center p-2">
-                        <img src="img/member1.jpeg" alt="Luisa-Fernanda-Castellanos-Rosales" class="teamImg mt-3">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Luisa Fernanda Castellanos Rosales</h5>
-                        <p class="card-text">Ingeniera de Petróleos / Entrenadora de Baloncesto. Edad 28 años.
-                            Pasatiempo Montar Bicicleta.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-black">Universidad Industrial de Santander / Tunja / Boyacá</small>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col mt-3">
-                <div class="box card text-black bg-light">
-                    <div class="d-flex justify-content-center p-2">
-                        <img src="img/member2.jpeg" alt="Maria-Fernanda-Florez-Rodriguez" class="teamImg mt-3">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Maria Fernanda Florez Rodríguez</h5>
-                        <p class="card-text">Estudiante de Bioingenieria / Edad 23 años. Interes en Diversos Lenguajes
-                            Java, C, C++, Matlab y R.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-black">Universidad de Antioquia / Medellín / Antioquia</small>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col mt-3">
-                <div class="box card text-black bg-light">
-                    <div class="d-flex justify-content-center p-2">
-                        <img src="img/member3.jpg" alt="Alberto-Salazar-Mayorga" class="teamImg mt-3">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Alberto Salazar Mayorga</h5>
-                        <p class="card-text">Ingeniero Industrial / Esp. en Dirección de Proyectos / MBA. Edad 31 Años.
-                            Pasatiempos Fútbol / Motociclismo.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-black">Universidad Sergio Arboleda / Bogotá D.C. / Cundinamarca</small>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col mt-3">
-                <div class="box card text-black bg-light">
-                    <div class="d-flex justify-content-center p-2">
-                        <img src="img/member4.jpeg" alt="Jose-Andres-Lopez-Muñoz" class="teamImg mt-3">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Jose Andres Lopez Muñoz</h5>
-                        <p class="card-text">Estudiante de Ingeniería Electrónica / Edad 22 Años. Apasionado por la I.A.
-                            Machine Learning y Cloud Computing.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-black">Universidad Santo Tomas / Bogotá D.C. / Cundinamarca</small>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col mt-3">
-                <div class="box card text-black bg-light">
-                    <div class="d-flex justify-content-center p-2">
-                        <img src="img/member5.jpeg" alt="Henry-Alejandro-Caceres-Tellez" class="teamImg mt-3">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Henry Alejandro Cáceres Téllez</h5>
-                        <p class="card-text">Ingeniero De Sistemas / Edad 28 Años. Pasatiempos Fútbol, Baloncesto,
-                            Ciclismo, Videojuegos y Anime.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-black">Universidad del Tolima / Ibagué / Tolima</small>
-                    </div>
-                </div>
-            </div>
-
-        </div>
+    <div id="app">
+        
     </div>
 
     <!-- Footer -->
