--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Developer Site</title>
+    <title>My Site with Bootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no ">
     <!-- CSS -->
     <link rel=" stylesheet " href=" ./css/normalize.css ">
